Checking fixes for responsivnes on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,5 @@
 
 body {
   overflow-x: hidden;
+  max-width: 100vw;
 }
